# Snake-With-Q-Learning

./: .gitignore  Cargo.toml  LICENSE  README.md  README.ru.md  build_cuda.cmd  build_dqn_windows.cmd  build_npu_windows.cmd  deny.toml  nvcc_wrap.bat  snake_agent.json
.github/workflows/: rust.yml
docs/: README.md  api.md  build-and-run.md  code-map.md  dqn-candle.md  npu-directml.md
src/: dqn.rs  draw.rs  game.rs  gpu_nn.rs  gpu_render.rs  grid.wgsl  instanced.wgsl  main.rs  npu.rs  pos.rs
src/export/: README.md  export_to_onnx.py  requirements.txt
target_alt/: .rustc_info.json
target_alt/debug/.fingerprint/Snake-With-Q-Learning-3e253dfe696275eb/: bin-Snake-With-Q-Learning  bin-Snake-With-Q-Learning.json  output-bin-Snake-With-Q-Learning
target_alt/debug/.fingerprint/Snake-With-Q-Learning-e14098c406268924/: bin-Snake-With-Q-Learning  bin-Snake-With-Q-Learning.json
target_alt/debug/.fingerprint/ahash-2ee71eebdb35dd43/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/ahash-383b33d033177f65/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/ahash-cea866d1cd69d736/: lib-ahash  lib-ahash.json
target_alt/debug/.fingerprint/allocator-api2-a068e79b7191fc21/: lib-allocator_api2  lib-allocator_api2.json
target_alt/debug/.fingerprint/arrayvec-52e085069d85b4fa/: lib-arrayvec  lib-arrayvec.json
target_alt/debug/.fingerprint/ash-976d281425049616/: lib-ash  lib-ash.json
target_alt/debug/.fingerprint/ash-de086c2c698d7636/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/ash-ff6f2d374a5f960b/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/autocfg-8e68ba8c9cc64d10/: lib-autocfg  lib-autocfg.json
target_alt/debug/.fingerprint/backtrace-a98e286ae877a7eb/: lib-backtrace  lib-backtrace.json
target_alt/debug/.fingerprint/bit-set-e5b5a24573b0f742/: lib-bit_set  lib-bit_set.json
target_alt/debug/.fingerprint/bit-vec-8acd3ed2ce9ff2b4/: lib-bit_vec  lib-bit_vec.json
target_alt/debug/.fingerprint/bitflags-826c2c476ab37867/: lib-bitflags  lib-bitflags.json
target_alt/debug/.fingerprint/bitflags-a9e229028fa248ac/: lib-bitflags  lib-bitflags.json
target_alt/debug/.fingerprint/bytemuck-8e2211510bb8ff45/: lib-bytemuck  lib-bytemuck.json
target_alt/debug/.fingerprint/cfg-if-a5b41a20ab9a3a98/: lib-cfg_if  lib-cfg_if.json
target_alt/debug/.fingerprint/cfg_aliases-0b87d4803097632c/: lib-cfg_aliases  lib-cfg_aliases.json
target_alt/debug/.fingerprint/codespan-reporting-b79df1dcd2e699d6/: lib-codespan_reporting  lib-codespan_reporting.json
target_alt/debug/.fingerprint/com-rs-17e8f37461a1fc95/: build-script-build-script-build  build-script-build-script-build.json
target_alt/debug/.fingerprint/com-rs-86abed82a66cbec4/: lib-com_rs  lib-com_rs.json
target_alt/debug/.fingerprint/com-rs-dff573a4825a058c/: run-build-script-build-script-build  run-build-script-build-script-build.json
target_alt/debug/.fingerprint/d3d12-cdd636c769ca4a6a/: lib-d3d12  lib-d3d12.json
target_alt/debug/.fingerprint/getrandom-76b106a84ee24725/: lib-getrandom  lib-getrandom.json
target_alt/debug/.fingerprint/glow-e026e732401c26f3/: lib-glow  lib-glow.json
target_alt/debug/.fingerprint/gpu-alloc-0d3b1a0d0da7b0d6/: lib-gpu_alloc  lib-gpu_alloc.json
target_alt/debug/.fingerprint/gpu-alloc-types-d4e92ec31be37e78/: lib-gpu_alloc_types  lib-gpu_alloc_types.json
target_alt/debug/.fingerprint/gpu-allocator-d5513f61b442e26e/: lib-gpu_allocator  lib-gpu_allocator.json
target_alt/debug/.fingerprint/gpu-descriptor-76eb74f2832eb244/: lib-gpu_descriptor  lib-gpu_descriptor.json
target_alt/debug/.fingerprint/gpu-descriptor-types-4064d79f0782c74b/: lib-gpu_descriptor_types  lib-gpu_descriptor_types.json
target_alt/debug/.fingerprint/hashbrown-3806abd48bcdd93b/: lib-hashbrown  lib-hashbrown.json
target_alt/debug/.fingerprint/hashbrown-868552059f91c979/: lib-hashbrown  lib-hashbrown.json
target_alt/debug/.fingerprint/hassle-rs-5d76ce7aafe7f2f9/: lib-hassle_rs  lib-hassle_rs.json
target_alt/debug/.fingerprint/indexmap-51c62bec53416648/: lib-indexmap  (+1 more)
target_alt/release/: Snake-With-Q-Learning.d
(+448 files in other folders)
