[package]
name = "Snake-With-Q-Learning"
version = "0.1.0"
edition = "2024"
license = "MIT"

[patch.crates-io]
bincode = { version = "=2.0.0-rc.3" }

[features]
# GPU NN UI scaffolding only (safe): does not include heavy deps
gpu-nn = []
# Experimental GPU NN backend (burn/wgpu): may require newer toolchain/deps
gpu-nn-experimental = ["dep:burn", "dep:burn-wgpu"]
# DQN with Candle on GPU (CUDA) or CPU
dqn-gpu = ["dep:candle-core", "dep:candle-nn", "dep:candle-cuda"]

[dependencies]
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
ahash = { version = "0.8", features = ["serde"] }
rayon = "1.10"
wgpu = "0.16"
pollster = "0.3"

# Optional: GPU NN backend (disabled by default)
burn = { version = "0.14", optional = true, default-features = false }
burn-wgpu = { version = "0.14", optional = true, default-features = false }

# Candle (Rust DL) optional deps for DQN
candle-core = { version = "0.6", optional = true, default-features = false, features = ["cuda"] }
candle-nn = { version = "0.6", optional = true, default-features = false }
candle-cuda = { version = "0.6", optional = true, default-features = false }

